--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,8 @@ dependencies:
   polkawallet_sdk: ^0.2.5
   polkawallet_ui:
     git:
-      url: https://github.com/polkawallet-io/ui.git
-      ref: 144a244b038e56aead4fc97a189057819bfeab08
+      url: https://github.com/ashishbeck/ui.git
+      ref: 39dedfb392bf9f809f7bbcaa82dc7fcbe3860c9b
 #    path: ../ui
 
 dependency_overrides:
