--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   polkawallet_ui:
     git:
       url: https://github.com/ashishbeck/ui.git
-      ref: 39dedfb392bf9f809f7bbcaa82dc7fcbe3860c9b
+#       ref: 39dedfb392bf9f809f7bbcaa82dc7fcbe3860c9b
 #    path: ../ui
 
 dependency_overrides:
